# library-babel

./: .gitattributes  .gitignore  .gitlab-ci.yml  README.md  cli.py  main-cli.py  main-gui.py  main-tui.py  main-webui.py  main.py  pyproject.toml
.github/workflows/: build.yml  count.yml  unittest.yml
assets/: style.tcss
docs/: 1-ABOUT.md  2-DETAILS.md  3-EXTRA.md  ABOUT.md  DETAILS.md
my_babel_py/: __init__.py  book.py  browse.py  char.py  config.py  find.py  pdf.py  png.py  randomize.py  search.py  txt.py  utils.py
my_babel_py/api/: book.py  randomize.py  search.py
my_babel_py/core/: __init__.py  base.py  book.py  char.py  config.py  cste.py  stubs.py  translit.py  types.py  utils.py
my_babel_py/interface/: cli.py
my_babel_py/io/: __init__.py  img.py  pdf.py  png.py  txt.py  utils.py
my_babel_py/output/: img.py  txt.py
src/: __init__.py  chr.py
test/: test_core.py
tests/: test_base_conversion.py  test_book_class.py  test_characters_set.py  test_img_io.py  test_romanization.py  test_txt_io.py
urbabel/: cli.py  gui.py  tui.py  webui.py
urbabel/api/: book.py  randomize.py
urbabel/core/: config.py  utils.py
urbabel/io/: __init__.py  pdf.py  png.py  txt.py
