[project]
name = "library-babel"
authors = [{name = "PTA"}]
version = "0.0.1"
description = "a customized Python CLI version of @zwyx ’s Library of Babel"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Operating System :: OS Independent",
	"Environment :: Console",
	"License :: OSI Approved :: MIT License",
	"Intended Audience :: Science/Research",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">= 3.11"
dependencies = [
	"gmpy2",
	"pyicu",
]

[project.optional-dependencies]
dev = [
	"nuitka[all]",
	"textual-dev",
]
img = ["pillow"]
pdf = ["fpdf2"]
tui = ["textual"]
webui = ["nicegui"]

[project.urls]
Repository = "https://github.com/phineas-pta/library-babel"
